Fixed layout problems in admin under IE
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/branches/XWIKI_1_0_BETA_1@1746 f329d543-caf0-0310-9063-dda96c69346f

--- a/web/standard/src/main/webapp/skins/xwiki10b1/style.css
+++ b/web/standard/src/main/webapp/skins/xwiki10b1/style.css
@@ -60,3 +60,6 @@ li.selected {
   text-decoration: none;
   cursor: pointer;
 }
+.accordionTabTitleBar h6 {
+  width: 100%;
+}
